Change log for Bos Wars
-----------------------

Development version:
- Fix bug #25178 in patch editor; mouse placement confusion (Jimmy Salmon)
- Nukes target the center of the target. (Jann Horn)
- Fix use of settings from pkg-config in SCons. (Francois Beerten)
- Replace the deprecated SCons Options class by Variables.
  This requires SCons 0.98.1 or higher. (Francois Beerten)
- Replace the deprecated SCons calls to env.Copy by calls to env.Clone.
  This requires SCons 0.96.93 or higher. (Francois Beerten)
- Remove incomplete Dorcoz unit (Francois Beerten)
- Fix header includes for GCC 4.4 (Francois Beerten)
- Add the "grass" set of patches (Johannes Engelhardt)
- Added undo and redo to the editor (Jimmy Salmon)
- Add new defeat background graphic (Johannes Engelhardt)
- Quick drawing in the main menus (Jimmy Salmon)
- Added patch support to the editor (Jimmy Salmon)
- Add the heli unit (Johannes Engelhardt and Francois Beerten)
- Add the big gun turret (Johannes Engelhardt and Francois Beerten)
- Support lua 5.1 only (Jimmy Salmon and Francois Beerten)
- New patch based map system (Jimmy Salmon)

Version 2.5.1:
- Fixed crash in savegames with destroyed buildings seen by other players (Jimmy Salmon)

Version 2.5.0 (2008 3 1):
- Free OpenGL textures before changing video mode since not all platforms
destroy the OpenGL context (Jimmy Salmon)
- Fix crash where graphics were loaded before the video subsystem was
started (Francois Beerten)
- Remove runtime libraries from the repository (Francois Beerten)
- Don't let an engineer build on top of itself (Jimmy Salmon)
- Allow recycling buildings under construction (Jimmy Salmon)
- Set the start position in campaign level 5 (Jimmy Salmon)
- Fix engineer build icons. (Francois Beerten)

Version 2.5.0 prerelease (2008 1 26):
- Replace magnifying glass cursor by a variant of the elites claw cursor.
(Francois Beerten)
- Fix screenshots at 16bpp (Jimmy Salmon)
- Show if the user cheated on the results screen (Jimmy Salmon)